6755988: G1: assert(new_obj != 0 || ... "should be forwarded")

A TLAB became large enough to be considered a humongous object allowing multiple objects to be allocated in a humongous region, which violates a basic assumption about humongous regions. The changes ensure that TLABs cannot be regarded as humongous.

Reviewed-by: iveresov, tonyp